Cofigure Spock tests with Java 11