@@ -18,6 +18,8 @@
     <properties>
         <java.version>11</java.version>
         <spock.version>1.3-groovy-2.5</spock.version>
+        <groovy-all.version>2.5.10</groovy-all.version>
+        <cglib-nodep.version>3.2.5</cglib-nodep.version>
         <gmavenplus-plugin.version>1.6.2</gmavenplus-plugin.version>
     </properties>
 
@@ -85,11 +87,17 @@
             <version>${spock.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.4.7</version>
+            <version>${groovy-all.version}</version>
+            <type>pom</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>${cglib-nodep.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -101,7 +109,7 @@
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
-            <version>1.6.4</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
@@ -155,11 +163,12 @@
                     <includes>
                         <include>**/*Spec.*</include>
                     </includes>
-                    <!--suppress UnresolvedMavenProperty -->
-                    <argLine>
-                        ${argLine} --illegal-access=permit
-                    </argLine>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
             </plugin>
         </plugins>
     </build>
